--- a/news/newsapp/templates/newsapp/main.html
+++ b/news/newsapp/templates/newsapp/main.html
@@ -12,13 +12,13 @@
 	<div>
 		<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 		  <div class="carousel-indicators">
-			  {% for item in week_popular_articles %}
-				  {% if item == week_popular_articles.0 %}
+			  {% for item in articles %}
+				  {% if forloop.counter == 0 %}
 					<button type="button" data-bs-target="#carouselExampleCaptions"
 							data-bs-slide-to="{{forloop.counter|add:-1}}" class="active"
 							aria-current="true" aria-label="Slide {{forloop.counter|add:-1}}">
 					</button>
-				  {% elif item != week_popular_articles.0 %}
+				  {% elif forloop.counter != 0 %}
 					<button type="button" data-bs-target="#carouselExampleCaptions"
 							data-bs-slide-to="{{forloop.counter|add:-1}}"
 							aria-label="Slide {{forloop.counter|add:-1}}">
@@ -27,8 +27,8 @@
 			  {% endfor %}
 		  </div>
 		  <div class="carousel-inner">
-			{% for item in week_popular_articles %}
-			  {% if item == week_popular_articles.0 %}
+			{% for item in articles %}
+			  {% if forloop.counter == 0 %}
 				<div class="carousel-item active">
 					<a href="{{item.get_absolute_url}}">
 						<img src="{{ item.photo.url }}" class="d-block w-100" alt="{{item.name}}">
@@ -38,7 +38,7 @@
 					<p>{{item.content|truncatewords:8}}</p>
 				  </div>
 				</div>
-			  {% elif item != week_popular_articles.0 %}
+			  {% elif forloop.counter != 0 %}
 				<div class="carousel-item">
 					<a href="{{item.get_absolute_url}}">
 						<img src="{{item.photo.url}}" class="d-block w-100" alt="{{item.name}}">
@@ -68,64 +68,44 @@
 	<!-- Main information and Menu -->
 	<div class="row">
 		{% if new_articles|length == 0 %}
-		<div class="col-12 articles">
-			{% for item in articles|dictsortreversed:"views"%}
-				<div class="card mb-3">
-					<a href="{{ item.get_absolute_url }}">
-						<img src="{{item.photo.url}}" class="card-img-top" alt="{{item.title}}">
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">{{item.title}}</h5>
-						<p class="card-text">{{item.content|truncatewords:35}}</p>
-						<p class="card-text">
-							<small class="text-muted">
-								{{item.time_create|date:"d M Y"}} в {{item.time_create.time|date:"H:i"}}
-								| Автор: <a href="{{item.user.userprofile.get_absolute_url}}">{{item.user.username}}</a>
-								| Тема: <a href="{{item.cat.get_absolute_url}}">{{item.cat.name}}</a>
-								| Просмотры: {{item.views}}
-								| Рейтинг: {{item.get_rating}}
-							</small>
-						</p>
-						<div class="rom">
-						<a class="btn btn-secondary" href="{{ item.get_absolute_url }}" type="submit">Читать статью</a>
-						{% if request.user.is_authenticated %}
-							<a class="btn btn-secondary" data-action="favorite" data-id="{{item.pk}}" data-type="Article">
-								{% if item.in_user_favorites %}
-								Убрать из избранного
-								{%else%}
-								Добавить в избранное
-								{%endif%}
-							</a>
-						{% endif %}
-						</div>
-					</div>
-				</div>
-			{% endfor %}
-		</div>
+		<div class="col-12 articles mt-3">
 		{% else %}
-		<div class="col-9 articles">
-			<h2 class="mb-3">Популярное</h2>
-			{% for item in articles|dictsortreversed:"views"%}
-				<div class="card mb-3">
-					<a href="{{ item.get_absolute_url }}">
-						<img src="{{item.photo.url}}" class="card-img-top" alt="{{item.title}}">
-					</a>
-					<div class="card-body">
-						<h5 class="card-title">{{item.title }}</h5>
-						<p class="card-text">{{item.content|truncatewords:35}}</p>
-						<p class="card-text">
-							<small class="text-muted">
-								{{item.time_create|date:"d M Y"}} в {{item.time_create.time|date:"H:i"}}
-								| Автор: <a href="{{item.user.userprofile.get_absolute_url}}">{{item.user.username}}</a>
-								| Тема: <a href="{{item.cat.get_absolute_url}}">{{item.cat.name}}</a>
-								| Просмотры: {{item.views}}
-							</small>
-						</p>
-						<a class="btn btn-secondary" href="{{ item.get_absolute_url }}" type="submit">Читать статью</a>
+		<div class="col-9 articles mt-3">
+		{% endif %}
+		{% for item in articles%}
+			<div class="card mb-3">
+				<a href="{{ item.get_absolute_url }}">
+					<img src="{{item.photo.url}}" class="card-img-top" alt="{{item.title}}">
+				</a>
+				<div class="card-body">
+					<h5 class="card-title">{{item.title}}</h5>
+					<p class="card-text">{{item.content|truncatewords:35}}</p>
+					<p class="card-text">
+						<small class="text-muted">
+							{{item.time_create|date:"d M Y"}} в {{item.time_create.time|date:"H:i"}}
+							| Автор: <a href="{{item.user.userprofile.get_absolute_url}}">{{item.user.username}}</a>
+							| Тема: <a href="{{item.cat.get_absolute_url}}">{{item.cat.name}}</a>
+							| Просмотры: {{item.views}}
+							| Рейтинг: {{item.get_rating}}
+						</small>
+					</p>
+					<div class="rom">
+					<a class="btn btn-secondary" href="{{ item.get_absolute_url }}" type="submit">Читать статью</a>
+					{% if request.user.is_authenticated %}
+						<a class="btn btn-secondary" data-action="favorite" data-id="{{item.pk}}" data-type="Article">
+							{% if item.in_user_favorites %}
+							Убрать из избранного
+							{%else%}
+							Добавить в избранное
+							{%endif%}
+						</a>
+					{% endif %}
 					</div>
 				</div>
-			{% endfor %}
+			</div>
+		{% endfor %}
 		</div>
+		{% if new_articles|length > 0 %}
 		<div class="col-3 menu">
 			<h2>Новости за сегодня</h2>
 			{% for item in new_articles %}
@@ -147,6 +127,6 @@
 				</div>
 			{% endfor %}
 		</div>
-		{%endif%}
+		{% endif %}
 	</div>
 {% endblock %}
