--- a/news/account/templates/account/liked_articles.html
+++ b/news/account/templates/account/liked_articles.html
@@ -3,35 +3,6 @@
 
 {%block content%}
     <h1>{{title}} {{user.username}}</h1>
-    {% for item in articles%}
-        <div class="card mb-3">
-            <a href="{{ item.get_absolute_url }}">
-                <img src="{{item.photo.url}}" class="card-img-top" alt="{{item.title}}">
-            </a>
-            <div class="card-body">
-                <h5 class="card-title">{{item.title}}</h5>
-                <p class="card-text">{{item.content|truncatewords:35}}</p>
-                <p class="card-text">
-                    <small class="text-muted">
-                        {{item.time_create|date:"d M Y"}} в {{item.time_create.time|date:"H:i"}}
-                        | Автор: <a href="{{item.user.userprofile.get_absolute_url}}">{{item.user.username}}</a>
-                        | Тема: <a href="{{item.cat.get_absolute_url}}">{{item.cat.name}}</a>
-                        | Просмотры: {{item.views}}
-                        | Рейтинг: {{item.get_rating}}
-                    </small>
-                </p>
-                <a class="btn btn-secondary" href="{{ item.get_absolute_url }}" type="submit">Читать статью</a>
-                {% if request.user.is_authenticated %}
-							<a class="btn btn-secondary" data-action="favorite" data-id="{{item.pk}}" data-type="Article">
-								{% if item.in_user_favorites %}
-								Убрать из избранного
-								{%else%}
-								Добавить в избранное
-								{%endif%}
-							</a>
-                {% endif %}
-            </div>
-        </div>
-    {% endfor %}
-
+    <!--  Общий шаблон выведения статей	-->
+    {% include 'newsapp/common_articles_list.html'%}
 {%endblock%}
