--- a/maindir/news/newsapp/templates/newsapp/articles_list.html
+++ b/maindir/news/newsapp/templates/newsapp/articles_list.html
@@ -41,7 +41,7 @@
                 <div class="rom">
                 <a class="btn btn-secondary" href="{{ item.get_absolute_url }}" type="submit">Читать статью</a>
                 {% if request.user.is_authenticated %}
-                    <a class="btn btn-secondary" data-action="favorite" data-id="{{item.pk}}" data-type="Article">
+                    <a class="btn btn-secondary" data-action="favorite" data-id="{{item.pk}}" data-type="article">
                         {% if item.is_user_favorite %}
                         Убрать из избранного
                         {%else%}
